<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picar-cpp-displays</name>
  <version>0.0.0</version>
  <description>PiCar-S display modules</description>
  <maintainer email="none@none.none">Rafal Bielski</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/rafbiels/picar-cpp</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
